# project_task_manager

./: .gitignore  Makefile  README.md  build.sh  pyproject.toml  setup.cfg
.github/workflows/: django_app.yml
task_manager/: asgi.py  settings.py  urls.py  views.py  wsgi.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py
task_manager/tasks/: filters.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_description.py  0003_task_labels.py  0004_alter_task_options.py
task_manager/templates/: base.html  errors.html  index.html
task_manager/templates/labels/: label_create.html  label_delete.html  label_update.html  labels.html
task_manager/templates/statuses/: status_create.html  status_delete.html  status_update.html  statuses.html
task_manager/templates/tasks/: task_create.html  task_delete.html  task_filter.html  task_update.html  task_view.html  tasks.html
task_manager/templates/users/: login.html  user_create.html  user_delete.html  user_update.html  users.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
